--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@fibre/translations",
-  "version": "1.0.2",
+  "version": "1.0.7",
   "description": "The translation files for the Git source control client, Fibre",
-  "main": "index.js",
+  "main": "dist/src/index.js",
   "scripts": {
+    "build": "trash dist&&tsc",
     "test": "mocha -r ts-node/register tests/**/*.spec.ts",
-    "prepublishOnly": "npm run test",
+    "prepublishOnly": "npm run build&&npm run test",
     "release": "npm publish --scope=@fibre --access public"
   },
   "repository": {
@@ -23,7 +24,8 @@
   },
   "homepage": "https://github.com/Fibre-SCM/Translations#readme",
   "files": [
-    "translations"
+    "translations",
+    "dist/src"
   ],
   "devDependencies": {
     "@types/chai": "^4.2.11",
@@ -36,9 +38,10 @@
     "glob": "^7.1.6",
     "jsonschema": "^1.2.6",
     "mocha": "^7.1.2",
+    "trash": "^6.1.1",
     "ts-node": "^8.9.1",
+    "tsc": "^1.20150623.0",
     "typescript": "^3.8.3"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
