--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,5 +21,11 @@ steps:
   displayName: 'npm install'
 
 - script: |
-    npm run test
+    npm run coverage
   displayName: 'npm test'
+  
+- task: PublishCodeCoverageResults@1
+  inputs:
+    codeCoverageTool: 'Cobertura'
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage/cobertura-coverage.xml'
+    reportDirectory: '$(System.DefaultWorkingDirectory)/**/coverage'
