--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "trash dist&&tsc",
     "test": "mocha -r ts-node/register tests/**/*.spec.ts",
+    "coverage": "nyc --reporter=html --reporter=cobertura mocha -r ts-node/register 'tests/**/*.spec.ts'",
     "prepublishOnly": "npm run build&&npm run test",
     "release": "npm publish --scope=@fibre --access public"
   },
@@ -38,9 +39,11 @@
     "glob": "^7.1.6",
     "jsonschema": "^1.2.6",
     "mocha": "^7.1.2",
+    "nyc": "^15.0.1",
     "trash": "^6.1.1",
     "ts-node": "^8.9.1",
     "tsc": "^1.20150623.0",
+    "typemoq": "^2.1.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {}
