--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,28 +4,28 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- master
-- develop
+  - master
+  - develop
 
 pool:
   vmImage: "$(vmImage)"
 
 steps:
-- task: UseNode@1
-  inputs:
-    version: "13.2.0"
-  displayName: 'Install Node.js'
+  - task: UseNode@1
+    inputs:
+      version: "13.2.0"
+    displayName: "Install Node.js"
 
-- script: |
-    npm install
-  displayName: 'npm install'
+  - script: |
+      npm install
+    displayName: "npm install"
 
-- script: |
-    npm run coverage
-  displayName: 'npm test'
-  
-- task: PublishCodeCoverageResults@1
-  inputs:
-    codeCoverageTool: 'Cobertura'
-    summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage/cobertura-coverage.xml'
-    reportDirectory: '$(System.DefaultWorkingDirectory)/**/coverage'
+  - script: |
+      npm run coverage
+    displayName: "npm test"
+
+  - task: PublishCodeCoverageResults@1
+    inputs:
+      codeCoverageTool: "Cobertura"
+      summaryFileLocation: "$(System.DefaultWorkingDirectory)/**/coverage/cobertura-coverage.xml"
+      reportDirectory: "$(System.DefaultWorkingDirectory)/**/coverage"
