--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
     "trash": "^6.1.1",
     "ts-node": "^8.9.1",
     "tsc": "^1.20150623.0",
+    "tslint": "^6.1.3",
     "typemoq": "^2.1.0",
-    "typescript": "^3.8.3"
+    "typescript": "^4.0.3"
   },
   "dependencies": {}
 }
