--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The translation files for the Git source control client, Fibre",
   "main": "dist/src/index.js",
   "scripts": {
-    "build": "trash dist&&tsc",
+    "build": "./node_modules/.bin/rimraf dist&&tsc",
     "test": "mocha -r ts-node/register tests/**/*.spec.ts",
     "coverage": "nyc --reporter=html --reporter=cobertura mocha -r ts-node/register 'tests/**/*.spec.ts'",
     "prepublishOnly": "npm run build&&npm run test",
@@ -42,12 +42,13 @@
     "jsonschema": "^1.2.6",
     "mocha": "^7.1.2",
     "nyc": "^15.0.1",
-    "trash": "^6.1.1",
     "ts-node": "^8.9.1",
     "tsc": "^1.20150623.0",
     "tslint": "^6.1.3",
     "typemoq": "^2.1.0",
     "typescript": "^4.0.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "rimraf": "^3.0.2"
+  }
 }
