--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/glob": "^7.1.1",
     "@types/jest": "^26.0.15",
     "@types/jsonschema": "^1.1.1",
-    "@types/node": "^13.13.4",
+    "@types/node": "~14.14.0",
     "glob": "^7.1.6",
     "jest": "^26.6.3",
     "jsonschema": "^1.2.6",
