--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fibre/translations",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "The translation files for the Git source control client, Fibre",
   "main": "dist/src/translation-utils.js",
   "scripts": {
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/Fibre-SCM/Translations#readme",
   "files": [
     "translations",
-    "dist/src"
+    "dist"
   ],
   "devDependencies": {
     "@tobysmith568/prettier-config": "^1.0.0",
@@ -39,6 +39,7 @@
     "glob": "^7.1.6",
     "jest": "^26.6.3",
     "jsonschema": "^1.2.6",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.4.4",
     "ts-node": "^8.9.1",
     "tsc": "^1.20150623.0",
@@ -46,7 +47,5 @@
     "typemoq": "^2.1.0",
     "typescript": "^4.0.5"
   },
-  "dependencies": {
-    "rimraf": "^3.0.2"
-  }
+  "dependencies": {}
 }
