--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,31 +1,60 @@
-# Node.js
-# Build a general Node.js project with npm.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
-
 trigger:
   - master
   - develop
 
-pool:
-  vmImage: "$(vmImage)"
+jobs:
+  - job: BuildAndUnitTests
+    displayName: Build and run unit tests on
 
-steps:
-  - task: UseNode@1
-    inputs:
-      version: "13.2.0"
-    displayName: "Install Node.js"
+    strategy:
+      matrix:
+        Linux:
+          imageName: "ubuntu-latest"
+        MacOs:
+          imageName: "macOs-latest"
+        Windows:
+          imageName: "windows-latest"
 
-  - script: |
-      npm install
-    displayName: "npm install"
+    pool:
+      vmImage: "$(imageName)"
 
-  - script: |
-      npm run coverage
-    displayName: "npm test"
+    steps:
+      - task: UseNode@1
+        displayName: "Install Node.js"
+        inputs:
+          version: "14.3.0"
+        continueOnError: false
 
-  - task: PublishCodeCoverageResults@1
-    inputs:
-      codeCoverageTool: "Cobertura"
-      summaryFileLocation: "$(System.DefaultWorkingDirectory)/**/coverage/cobertura-coverage.xml"
-      reportDirectory: "$(System.DefaultWorkingDirectory)/**/coverage"
+      - task: Npm@1
+        displayName: "NPM Install Project"
+        inputs:
+          command: "ci"
+        continueOnError: false
+
+      - task: CmdLine@2
+        displayName: "Build Project"
+        inputs:
+          script: |
+            npm run build
+        continueOnError: false
+
+      - task: CmdLine@2
+        displayName: "Test Project"
+        inputs:
+          script: |
+            npm run test:ci
+        continueOnError: false
+
+      - task: PublishTestResults@2
+        displayName: "Publish Test Results"
+        inputs:
+          testResultsFormat: "JUnit"
+          testResultsFiles: "$(System.DefaultWorkingDirectory)/**/coverage/junit-reported-tests.xml"
+        continueOnError: false
+
+      - task: PublishCodeCoverageResults@1
+        displayName: "Publish Coverage Results"
+        inputs:
+          codeCoverageTool: "Cobertura"
+          summaryFileLocation: "$(System.DefaultWorkingDirectory)/**/coverage/cobertura-coverage.xml"
+        continueOnError: false
