--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "The translation files for the Git source control client, Fibre",
   "main": "dist/translation-utils.js",
   "scripts": {
-    "build": "./node_modules/.bin/rimraf dist&&tsc",
+    "build": "rimraf dist&&tsc",
     "test": "jest",
     "coverage": "jest --coverage",
+    "test:ci": "jest --ci --runInBand --coverage",
     "prepublishOnly": "npm run build&&npm run test",
     "release": "npm publish --scope=@fibre --access public",
     "nvm": "nvm use 14.14.0"
@@ -38,14 +39,14 @@
     "@types/node": "~14.14.0",
     "glob": "^7.1.6",
     "jest": "^26.6.3",
+    "jest-junit": "^12.0.0",
     "jsonschema": "^1.2.6",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.4.4",
     "ts-node": "^8.9.1",
-    "tsc": "^1.20150623.0",
     "tslint": "^6.1.3",
     "typemoq": "^2.1.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.3"
   },
   "dependencies": {}
 }
