Worked on the new structure for translations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,6 @@
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true
   },
+  "include": ["src/values", "src/index.ts", "src/translation-utils.ts"],
   "exclude": ["tests/**", "dist"]
 }
