--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@fibre/translations",
   "version": "3.0.3",
   "description": "The translation files for the Git source control client, Fibre",
-  "main": "dist/translation-utils.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "rimraf dist&&tsc",
     "test": "jest",
@@ -23,7 +23,6 @@
   "prettier": "@fibre/prettier-config",
   "homepage": "https://github.com/Fibre-SCM/Translations#readme",
   "files": [
-    "translations",
     "dist"
   ],
   "devDependencies": {
@@ -41,7 +40,7 @@
     "ts-node": "^8.9.1",
     "tslint": "^6.1.3",
     "typemoq": "^2.1.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.1.2"
   },
   "dependencies": {}
 }
