Added most of the translation codegen

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The translation files for the Git source control client, Fibre",
   "main": "dist/index.js",
   "scripts": {
-    "generate": "ts-node ./src/scripts/generate.ts",
+    "generate": "ts-node ./src/generation/generate.ts",
     "build": "rimraf dist&&tsc",
     "test": "jest",
     "coverage": "jest --coverage",
