--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+src/values
 
 # Created by https://www.gitignore.io/api/node,code,linux,macos,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=node,code,linux,macos,windows,visualstudiocode
