--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,3 +37,76 @@ jobs:
           script: |
             npm run build
         continueOnError: false
+    
+      # There are currently no unit tests in this project
+      # - task: CmdLine@2
+      #   displayName: "Test Project"
+      #   inputs:
+      #     script: |
+      #       npm run test:ci
+      #   continueOnError: false
+
+      # - task: PublishTestResults@2
+      #   displayName: "Publish Test Results"
+      #   inputs:
+      #     testResultsFormat: "JUnit"
+      #     testResultsFiles: "$(System.DefaultWorkingDirectory)/**/coverage/junit-reported-tests.xml"
+      #   continueOnError: false
+
+      # - task: PublishCodeCoverageResults@1
+      #   displayName: "Publish Coverage Results"
+      #   inputs:
+      #     codeCoverageTool: "Cobertura"
+      #     summaryFileLocation: "$(System.DefaultWorkingDirectory)/**/coverage/cobertura-coverage.xml"
+      #   continueOnError: false
+  
+  - job: CreateNPMPackage
+    displayName: Create NPM Package
+    dependsOn: BuildAndUnitTests
+    condition: succeeded()
+
+    pool:
+      vmImage: "ubuntu-latest"
+
+    steps:
+      - task: UseNode@1
+        displayName: "Install Node.js"
+        inputs:
+          version: "14.3.0"
+        continueOnError: false
+
+      - task: Npm@1
+        displayName: "NPM Install Project"
+        inputs:
+          command: "ci"
+        continueOnError: false
+
+      - task: CmdLine@2
+        displayName: "Build Project"
+        inputs:
+          script: |
+            npm run build
+        continueOnError: false
+
+      - task: Npm@1
+        displayName: "NPM Pack"
+        inputs:
+          command: "custom"
+          customCommand: "pack"
+        continueOnError: false
+
+      - task: CopyFiles@2
+        displayName: "Copy Packaged Tar"
+        inputs:
+          SourceFolder: "$(System.DefaultWorkingDirectory)"
+          Contents: "fibre-translations*.tgz"
+          TargetFolder: "$(System.DefaultWorkingDirectory)/package-artifact"
+        continueOnError: false
+
+      - task: PublishPipelineArtifact@1
+        displayName: "Publish Packaged Tar"
+        inputs:
+          targetPath: "$(System.DefaultWorkingDirectory)/package-artifact"
+          artifact: "Fibre Translations"
+          publishLocation: "pipeline"
+        continueOnError: false
