--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "coverage": "jest --coverage",
     "test:ci": "jest --ci --runInBand --coverage",
-    "prepublishOnly": "npm run build&&npm run test",
+    "prepack": "npm run build",
     "release": "npm publish --scope=@fibre --access public",
     "nvm": "nvm use 14.14.0"
   },
